# cursor-lb

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  vecel.json
app/: auth.py  config.py  customer_routes.py  db.py  db_migrate.py  letterhead.py  main.py  models.py  routes.py  schemas.py
app/repositories/: invoices.py  jobs.py  users.py
app/services/: analytics.py  customer_workflow.py  email_service.py  invoice_pdf.py  job_provider.py  payment_due.py  payment_reminders.py  payments.py  workflow.py
app/templates/: analytics.html  base.html  dashboard.html  job_book.html  login.html  signup.html
app/templates/customer/: book.html  dashboard.html  login.html  pay_invoice.html  payment_methods.html  settings.html  signup.html
app/templates/partials/: nav_customer.html  nav_logged_in.html
data/: README.md
docs/: ARCHITECTURE.md  RUNBOOK.md
docs/references/: README.md
scripts/: check-db.sh  run.sh  send_payment_reminders.py  verify.sh
tests/: conftest.py  test_analytics.py  test_customer_payments.py  test_customer_portal.py  test_db_schema.py  test_e2e.py  test_email_delivery.py  test_email_mailjet.py  test_legacy_roles.py  test_letterhead.py  test_mvp_features.py  test_payment_reminders.py
