[project]
name = "matt-invoice-assistant"
version = "0.1.0"
description = "Photographer job + invoice assistant for Matt"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "jinja2>=3.1.0",
    "python-multipart>=0.0.12",
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.0",  # <-- ADD THIS LINE
    "bcrypt>=4.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "itsdangerous>=2.0.0",
    "email-validator>=2.0.0",
    "fpdf2>=2.8.0",
    "httpx>=0.27.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "httpx>=0.27.0",
    "ruff>=0.8.0",
    "pyright>=1.1.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pyright]
include = ["app", "tests"]
pythonVersion = "3.12"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
markers = [
    "unit: unit tests",
]
